Fixed spacing issue for TItledInput

--- a/src/components/common/TitledInput.css
+++ b/src/components/common/TitledInput.css
@@ -34,5 +34,6 @@
   font-size: 24px;
   color: var(--color-very-dark-cyan);
   font-weight: 700;
-  max-width: 100%;
+  max-width: calc(100% - 11px);
+  padding-right: 0.5rem;
 }
